@@ -16,6 +16,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,32 +27,33 @@ public class FeedbackService {
     private final FeedbackRepository feedbackRepository;
 
 
-
-
     public Integer save(@Valid FeedbackRequest request, Authentication connectedUser) {
 
         Book book = bookRepository.findById(request.bookId())
-                .orElseThrow(()-> new EntityNotFoundException("Book not found with ID:"+ request.bookId()));
+                .orElseThrow(() -> new EntityNotFoundException("Book not found with ID:" + request.bookId()));
 
-        if(book.isArchived()|| !book.isShareable()){
+        if (book.isArchived() || !book.isShareable()) {
             throw new OperationNotPermittedException("You cannot give feedback for an archived or not shareable book");
         }
 
         User user = ((User) connectedUser.getPrincipal());
-        if(Objects.equals(book.getOwner().getId(),user.getId())){
+        if (Objects.equals(book.getOwner().getId(), user.getId())) {
             throw new OperationNotPermittedException("You cannot give feedback of your own book");
         }
         Feedback feedback = feedbackMapper.toFeedback(request);
         return feedbackRepository.save(feedback).getId();
     }
 
-    public PageResponse<FeedbackResponse> findAllFeedbackByBook(Integer bookId, int page, int size, Authentication connectedUser) {
-        Pageable pageable = PageRequest.of(page,size);
+    public PageResponse<FeedbackResponse> findAllFeedbackByBook(
+            Integer bookId, int page,
+            int size,
+            Authentication connectedUser) {
+        Pageable pageable = PageRequest.of(page, size);
         User user = ((User) connectedUser.getPrincipal());
 
-        Page<Feedback> feedbacks = feedbackRepository.findAllFeedbackByBookId(bookId,pageable);
+        Page<Feedback> feedbacks = feedbackRepository.findAllFeedbackByBookId(bookId, pageable);
         List<FeedbackResponse> feedbackResponseList = feedbacks.stream()
-                .map(f ->feedbackMapper.toFeedbackResponse(f,user.getId())).toList();
+                .map(f -> feedbackMapper.toFeedbackResponse(f, user.getId())).collect(Collectors.toList());
 
         return new PageResponse<>(
                 feedbackResponseList,
